--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,11 @@ h2{
    margin-left: 700px;
    margin-top: 30px;
    margin-bottom: 30px;
+   cursor: pointer;
+   
+}
+button:hover{
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 #section_2{
     margin: 30px;
